--- a/src/ci/github-actions/jobs.yml
+++ b/src/ci/github-actions/jobs.yml
@@ -91,6 +91,59 @@ pr:
   - image: x86_64-gnu-tools
     <<: *job-linux-16c
 
+  - image: dist-x86_64-apple
+    env:
+      SCRIPT: ./x.py dist bootstrap --include-default-paths --host=x86_64-apple-darwin --target=x86_64-apple-darwin
+      RUST_CONFIGURE_ARGS: --enable-full-tools --enable-sanitizers --enable-profiler --set rust.jemalloc --set rust.lto=thin --set rust.codegen-units=1
+      RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
+      MACOSX_DEPLOYMENT_TARGET: 10.12
+      SELECT_XCODE: /Applications/Xcode_14.3.1.app
+      NO_LLVM_ASSERTIONS: 1
+      NO_DEBUG_ASSERTIONS: 1
+      NO_OVERFLOW_CHECKS: 1
+      DIST_REQUIRE_ALL_TOOLS: 1
+      CODEGEN_BACKENDS: llvm,cranelift
+    <<: *job-macos-xl
+
+  - image: dist-apple-various
+    env:
+      SCRIPT: ./x.py dist bootstrap --include-default-paths --host='' --target=aarch64-apple-ios,x86_64-apple-ios,aarch64-apple-ios-sim,aarch64-apple-ios-macabi,x86_64-apple-ios-macabi
+      RUST_CONFIGURE_ARGS: --enable-sanitizers --enable-profiler --set rust.jemalloc
+      RUSTC_RETRY_LINKER_ON_SEGFAULT: 1
+      MACOSX_DEPLOYMENT_TARGET: 10.12
+      IPHONEOS_DEPLOYMENT_TARGET: 10.0
+      SELECT_XCODE: /Applications/Xcode_14.3.1.app
+      NO_LLVM_ASSERTIONS: 1
+      NO_DEBUG_ASSERTIONS: 1
+      NO_OVERFLOW_CHECKS: 1
+    <<: *job-macos-xl
+
+  # Test macOS in two steps for more parallellism across the build
+  - image: x86_64-apple-1
+    env:
+      SCRIPT: ./x.py --stage 2 test --skip tests/ui --skip tests/rustdoc
+      <<: *env-x86_64-apple-tests
+    <<: *job-macos-xl
+  - image: x86_64-apple-2
+    env:
+      SCRIPT: ./x.py --stage 2 test tests/ui tests/rustdoc
+      <<: *env-x86_64-apple-tests
+    <<: *job-macos-xl
+
+  # Test Mac Catalyst
+  - image: x86_64-apple-ios-macabi-1
+    env:
+      SCRIPT: ./x.py --stage 2 test --skip tests/ui --skip tests/rustdoc --host='' --target=x86_64-apple-ios-macabi
+      IPHONEOS_DEPLOYMENT_TARGET: 13.1
+      <<: *env-x86_64-apple-tests
+    <<: *job-macos-xl
+  - image: x86_64-apple-ios-macabi-2
+    env:
+      SCRIPT: ./x.py --stage 2 test tests/ui tests/rustdoc --host='' --target=x86_64-apple-ios-macabi
+      IPHONEOS_DEPLOYMENT_TARGET: 13.1
+      <<: *env-x86_64-apple-tests
+    <<: *job-macos-xl
+
 # Jobs that run when you perform a try build (@bors try)
 # These jobs automatically inherit envs.try, to avoid repeating
 # it in each job definition.
